[gd_scene load_steps=42 format=3 uid="uid://ckp7ajmys7eh4"]

[ext_resource type="Script" path="res://TitleScreen/title.gd" id="1_hb7qt"]
[ext_resource type="PackedScene" uid="uid://bhef1flilr6a8" path="res://TitleScreen/bg/bg.tscn" id="1_l0abl"]
[ext_resource type="PackedScene" uid="uid://dlxbtxdc3f5je" path="res://TitleScreen/bat/bat.tscn" id="2_1vms1"]
[ext_resource type="PackedScene" uid="uid://cftqnuiopntwe" path="res://cave_stage.tscn" id="2_iuydu"]
[ext_resource type="PackedScene" uid="uid://c7uj06y7amssb" path="res://TitleScreen/torch/torch.tscn" id="3_w3q7s"]
[ext_resource type="PackedScene" uid="uid://bkmykyi6cusg1" path="res://Gui/floating_menu/OptionMenu/OptionMenu.tscn" id="3_wuieq"]
[ext_resource type="PackedScene" uid="uid://dc02t6fgefai4" path="res://Gui/floating_menu/CreditWindow/CreditWindow.tscn" id="4_6xrcr"]
[ext_resource type="Texture2D" uid="uid://damraw6sn11jk" path="res://TitleScreen/bg/title.png" id="4_qjxmn"]
[ext_resource type="Texture2D" uid="uid://cr7ua0nkj086t" path="res://Enemy/Civilian/CivilianSprite/Civil_Idle.png" id="5_tqubi"]
[ext_resource type="Texture2D" uid="uid://bi6k34joswfs6" path="res://Gui/Button/start/start_normal.png" id="7_3u26q"]
[ext_resource type="Texture2D" uid="uid://bwcel6bi0rsu6" path="res://Gui/Button/option/option_normal.png" id="7_m4ie6"]
[ext_resource type="Texture2D" uid="uid://dnlw2qj8j66pe" path="res://Gui/Button/start/start_on.png" id="8_cs6nq"]
[ext_resource type="Texture2D" uid="uid://btbmpay4cc574" path="res://Gui/Button/option/option_on.png" id="8_g43y6"]
[ext_resource type="AudioStream" uid="uid://bd5ersjef2k6h" path="res://Sound/Title.mp3" id="9_bitgc"]
[ext_resource type="Texture2D" uid="uid://ch472xpertlgq" path="res://Gui/Button/start/start_press.png" id="9_f68gg"]
[ext_resource type="Texture2D" uid="uid://bkg1sw07m5xjq" path="res://Gui/Button/option/option_press.png" id="9_tt0kp"]
[ext_resource type="Texture2D" uid="uid://bngo3pxql5a05" path="res://Gui/Button/credit/credit_normal.png" id="13_julh8"]
[ext_resource type="Texture2D" uid="uid://bhaw4hc4lcla8" path="res://Gui/Button/credit/credit_on.png" id="14_mfp8x"]
[ext_resource type="Texture2D" uid="uid://tiurgcbrd1gb" path="res://Gui/Button/credit/credit_press.png" id="15_supwt"]
[ext_resource type="AudioStream" uid="uid://d3rjedrtif1re" path="res://Sound/sfx/Button-clicked.wav" id="19_uwqfv"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j2yhj"]
light_mode = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xvynk"]
texture = ExtResource("7_3u26q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oce5k"]
texture = ExtResource("8_cs6nq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0awb4"]
texture = ExtResource("9_f68gg")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ssrfo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w1fkc"]
texture = ExtResource("7_m4ie6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7p4sn"]
texture = ExtResource("8_g43y6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qo8ia"]
texture = ExtResource("9_tt0kp")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u6v0a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5nuv7"]
texture = ExtResource("13_julh8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sagx7"]
texture = ExtResource("14_mfp8x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sgstk"]
texture = ExtResource("15_supwt")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hctyp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qcfik"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_ti6en"]
atlas = ExtResource("5_tqubi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mlw2"]
atlas = ExtResource("5_tqubi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7pn0"]
atlas = ExtResource("5_tqubi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaou8"]
atlas = ExtResource("5_tqubi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ame27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti6en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mlw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7pn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaou8")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="Gradient" id="Gradient_k1e7f"]
offsets = PackedFloat32Array(0, 0.694805)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_x68q8"]
gradient = SubResource("Gradient_k1e7f")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Title" type="Node2D"]
script = ExtResource("1_hb7qt")
startGame = ExtResource("2_iuydu")
OptionMenu = ExtResource("3_wuieq")
Credits = ExtResource("4_6xrcr")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.5
blend_mode = 1

[node name="bg" parent="." instance=ExtResource("1_l0abl")]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 1)
zoom = Vector2(2.7, 2.851)

[node name="bat" type="Node" parent="."]

[node name="bat" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(-52, -96)

[node name="bat2" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(-136, -98)

[node name="bat3" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(-292, -96)

[node name="bat4" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(-231, -96)

[node name="bat5" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(82, -121)

[node name="bat6" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(137, -96)

[node name="bat9" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(104, -139)

[node name="bat10" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(307, -116)

[node name="bat11" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(263, -134)

[node name="bat7" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(189, -108)

[node name="bat8" parent="bat" instance=ExtResource("2_1vms1")]
position = Vector2(9, -97)

[node name="torch" type="Node" parent="."]

[node name="torch" parent="torch" instance=ExtResource("3_w3q7s")]
position = Vector2(18, -14)

[node name="torch2" parent="torch" instance=ExtResource("3_w3q7s")]
position = Vector2(244, 1)

[node name="menu" type="Node" parent="."]

[node name="start" type="Button" parent="menu"]
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_j2yhj")
anchors_preset = -1
anchor_left = -0.172
anchor_right = -0.172
offset_left = 23.2
offset_top = 27.0
offset_right = 119.2
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xvynk")
theme_override_styles/hover = SubResource("StyleBoxTexture_oce5k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0awb4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ssrfo")

[node name="option" type="Button" parent="menu"]
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_j2yhj")
anchors_preset = -1
anchor_left = -0.27
anchor_right = -0.27
offset_left = 180.0
offset_top = 66.0
offset_right = 276.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_w1fkc")
theme_override_styles/hover = SubResource("StyleBoxTexture_7p4sn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qo8ia")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u6v0a")

[node name="credit" type="Button" parent="menu"]
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_j2yhj")
anchors_preset = -1
anchor_left = -0.27
anchor_right = -0.27
offset_left = 180.0
offset_top = 107.0
offset_right = 276.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_5nuv7")
theme_override_styles/hover = SubResource("StyleBoxTexture_sagx7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sgstk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hctyp")

[node name="Sprite2D" type="Sprite2D" parent="menu"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_qcfik")
position = Vector2(-143, -78)
scale = Vector2(4, 4)
texture = ExtResource("4_qjxmn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(52, 96)
rotation = 3.14159
scale = Vector2(2, -2)
sprite_frames = SubResource("SpriteFrames_ame27")
autoplay = "default"

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(8, 7)
color = Color(1, 0.545098, 0, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_x68q8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_bitgc")
autoplay = true
bus = &"BGM"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_uwqfv")
bus = &"SFX"

[connection signal="pressed" from="menu/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="menu/credit" to="." method="_on_credit_pressed"]
